<resources>
    <string name="app_name">EnigMath!</string>
    <string name="sound">Sound</string>
    <string name="level">&#160;Level&#160;</string>
    <string name="play">Play</string>
    <string name="quizzy">EnigMath!</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
    <string name="my_play">My Play</string>
    <string name="my_level" />
    <string name="my_exit" />
    <string name="my_restart" />
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="answer">Answer</string>
    <string name="hint_icon">Hint icon</string>
    <string name="x">X</string>
    <string name="submit">Submit</string>
    <string name="congratulations">Congratulations</string>
    <string name="congratulations_you_have_mastered">Congratulations you have mastered</string>
    <string name="play_again">Play Again</string>
    <string name="topic">TOPIC:-</string>
    <string name="problem_name">Problem Name</string>
    <string name="cool">Cool!</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="tier">Tier</string>
    <string name="levelInLevel">LEVEL</string>
    <string name="question">Question</string>
    <string name="input">Input</string>
    <string name="number_two">
        >> On multiplying 5x+10y=40 by 2,
        and subtracting that equation by 10x+15y=20, we get y=12
    </string>
    <string name="number_one">
        >>Next Square 16
    </string>
    <string name="number_three">
        >> 25: 40:: 10 : x ⇒ 25 *x = (10 * 40)\n
        x= (36 *25 ) / 15 = 16
    </string>
    <string name="number_four">
        >> x2 + 4y2 - 4xy = 0\n
        (x-2y)2 = 0\n
        x-2y=0\n
        x = 2y\n
        x/y = 2/1.\n
        x = 2\n
    </string>
    <string name="number_five">
        >> 6 + 13 + 17 + 21 + 23 = 80\n
        Total units = 5\n
        Hence, average = 80/5 = 16
    </string>
    <string name="number_six">
        >> Area = 40 square units\n
        Height = 8 units\n
        Area of rhombus = Base × Height\n
        40 = Base × 8\n
        Base = 40/8 = 5 units\n
    </string>
    <string name="number_seven">
        >>Ans:22\n
        All the coffins that are open at the end will be perfect squares
    </string>
    <string name="number_eight">
        >>You need to count the number of closed circles.\n
        Ans:4
    </string>
    <string name="number_nine">
        >>Looking at lines of numbers\n
        from the top\n
        9×8 = 72; 72×8 = 576; 576×8 = 4608\n
        Ans:0\n
    </string>
    <string name="number_ten">
        >>(100 x 2 = 200; 200 + 800 = 1000; 1000 – 23 = 977)\n
        Ans:977\n
    </string>
    <string name="number_eleven">
        >>There are two sequences arranged alternately.\n
        In each sequence the number is the square of the\n
        previous number in that sequence.\n
        6561 is the square of 81.\n
    </string>
    <string name="number_twelfth">
        >>(6 + 17) – (5 + 9)\n
        Ans:9
    </string>
    <string name="number_13">
        >>(1st row)x(2nd row)x(3rd row) = 4th row.\n
        Let the missing number in the third column be x.\n
        Then, 8x5xX = 320.\n
        40X =320\n
        X = 8.\n
    </string>
    <string name="number_14">
        >>In the first column,12×6 = 72;18÷6 = 3\n
        In the third column,16×8 = 128;32÷8 = 4\n
        In the second column, 14×8 = 112.\n
        So, the missing number = 24÷8 = 3.\n
    </string>
    <string name="number_15">
        >>First column 11*11 -1*1=121-1=120\n
        Second column 7*7-2*2=49-4=45\n
        Third column 5*5-3*3=25-9=16\n
    </string>
    <string name="number_16">
        >>(1st row*1st row)+(2nd row*2nd row)\n
        +(3rd row*3rd row)=4th row\n
        First column, 4*4+2*2+1*1=21\n
        second column, 5*5+3*3+8*8=98\n
        Third column, 6*6+7*7+3*3=94\n
    </string>
    <string name="number_17">
        >>The numbers present represents the number of letters in the spelling of its corresponding number.\n
        Ans:6\n
    </string>
    <string name="number_18">
        >>Consider the first letter of the spelling of each digit, One+Nine+Eight= ONE, similarly Two+Eight+Nine= TEN\n
        Ans:10
    </string>
    <string name="number_19">
        >>Starting at 10 and moving three segments\n clockwise yields the series\n
        10, 11, 14, 19, ?, 35.\n
        The difference between
        terms in the series is the sequence of odd numbers 1, 3, 5, 7, 9, 11.\n
        Ans:26\n
    </string>
    <string name="number_20">
        >>Add 1 + 5 + 3 = 9.\n
        864 / 9 = 96\n
        96 x 5 = 480.\n
    </string>
    <string name="number_21">
        >>The total of three numbers must be 48×3 = 144\n
        The total of two numbers must be 56 × 2 = 112.\n
        Therefore, 144 – 112 = 32\n
    </string>
    <string name="number_22">
        >>Ans:3527\n
        In the others the sum of the first two numbers\n
        is equal to the sum of the second numbers\n
        For example 5+2 = 6+1.\n
    </string>
    <string name="number_23">
        >>Ans:888\n
        The sequence progresses x3, +2.\n
    </string>
    <string name="number_24">
        >>There are two alternative sequences : +14,-97.\n
        Ans:57\n
    </string>
    <string name="number_25">
        >>There are two alternate sequence +3 and -4\n
        Ans:11\n
    </string>
    <string name="number_26">
        >>Answer: 70. 20 divided by 1/2 + 30 = 70
    </string>
    <string name="number_27">
        >>X3 +1 at each stage\n
        Ans:607\n
    </string>
    <string name="number_28">
        >>Let the numbers be 10B + 8 and 10B + 3.\n
        The product of these numbers will be 644.\n
        (10B + 8) (10B + 3) = 644\n
        100B2 + 110B – 620 = 0\n
        10B2 + 11B – 62 = 0\n
        10B2 – 20B + 31B – 62 = 0\n
        10B (B – 2) + 31 (B – 2) = 0\n
        (B – 2) (10B + 31) = 0\n
        B = 2  or B = – 3110\n
    </string>
    <string name="number_29">
        >>The numbers in each circle total 100\n
        Ans:13\n
    </string>
    <string name="number_30">
        >>Numbers are obtained by adding pairs of digits
        i.e. with 571219: 5 + 7 = 12; 7 + 12 = 19.\n
        To follow this same pattern 971613 would have to be 971623.\n
    </string>
    <string name="number_31">
        >>Ans:75
    </string>
    <string name="number_32">
        >>Ans:16\n
        Each number in the bottom rows is the sum of the
        number above it and the previous number.\n
    </string>
    <string name="number_33">
        >>The numbers in each line contain the digits 1 – 9 once each only\n
        Ans:7
    </string>
    <string name="number_34">
        >>Spaced correctly, the series becomes 13 15 17 19 2(1)\n
        Ans:1\n
    </string>
    <string name="number_35">
        >>When you look at the relationship of each set of top and bottom numbers
        you will see that 12 is 2 x 6, 24 is 3 x 8, 36 is 4 x 9,
        45 is 5 x 9, 60 is 6 x 10, and 84 is 7 x 12.\n
        Ans:12\n
    </string>
    <string name="number_36">
        >>In this series, 5 is added to the previous number; the number 70 is inserted as every third number.\n
        Ans:70\n
    </string>
    <string name="number_37">
        >>The number formed at the top is half of the number formed at the bottom i.e. 358 x 2 = 716\n
        Ans:1\n
    </string>
    <string name="number_38">
        >>The missing number is 6.\n
        The two numbers opposite each other always total 21.\n
        15 + 6 = 21. The other numbers: 17 + 4 = 21\n
        13 + 8 = 21, 11 + 10 = 21\n
    </string>
    <string name="number_39">
        >>The odd one out is 78. It is 39 x 2.\n
        The other numbers are all evenly divisible by 37.\n
    </string>
    <string name="number_40">
        >>Working from top to bottom, double each number and subtract 1, then 2, then 3 etc
        Ans:39\n
    </string>
    <string name="number_41">
        >>The sequence progresses –7, –14, –21, –28\n
        Ans:30\n
    </string>
    <string name="number_42">
        >>Combined age in 15 years = 107.\n
        4 × 15 = 60, therefore combined age now is 107 – 60 = 47\n
        In 6 years time, therefore, combined age will be 47 + 24 (4 × 6) = 71.
    </string>
    <string name="number_43">
        >> Ans:17\n
        8 + 9 = 17; 7 + 6 = 13.
    </string>
    <string name="number_44">
        >> Ans:1417\n
        42/3 = 14, 51/3 = 17
    </string>
    <string name="number_45">
        >> Ans:150\n
        The sequence progresses +1, x2, +3, x4, +5, x6, +7
    </string>
    <string name="number_46">
        >>There are two alternate sequences: +3 and -4\n
        Ans:11\n
    </string>
    <string name="number_47">
        >>Multiply the bottom two numbers then take the square root, i.e. 1×4 = 4 and √4 = 2.\n
        Ans:1
    </string>
    <string name="number_48">
        >> Ans:40\n
        	Moving from left to right, numbers increase by 2,3,4 and 5.

    </string>
    <string name="number_49">
        >>Each number is the sum of the last two digits of the previous number, preceded by the remaining numbers in reverse.34826
    </string>
    <string name="number_50">
        >>Ans:24\n
        If you increase both the number of hens and the amount of time available four-fold, the number of eggs increases 16 times. 16 x 1.5 = 24.
    </string>
    <string name="question_1">
        1,4,9,?
    </string>
    <string name="question_2">
        10x+15y=20
        5x+10y=40
        Find y?
    </string>
    <string name="question_3">
        If 40 men can do a piece of word in 10 days, in how many days will 25 men do it?
    </string>
    <string name="question_4">
        x*x+4(y*y) = 4xy,then x = ?
    </string>
    <string name="question_5">
        The average of 6, 13, 17, 21, 23
    </string>
    <string name="question_6">
        What is the base of a rhombus, if its area is 40 square units and the height is 8 units?
    </string>
    <string name="question_7">
        There are 500 coffins and 500 men who need them. The undertaker asks the first man to go to every coffin and open them. Then he tells the second man to go to every one and close it. The third one goes to every third coffin and so on. How many are open?
    </string>
    <string name="question_8">
        123=0\n
        4235=0\n
        656=2\n
        5390=2\n
        8890=6\n
        1001=2\n
        19235=1\n
        What is 123456789?
    </string>
    <string name="question_9">
         9\n
        7 2\n
       5 7 6\n
      4 6 ? 8\n
    </string>
    <string name="question_10">
        There are 100 pairs of dogs in a zoo. Two pairs of babies are born for every dog. Unfortunately, 23 of the dogs have not survived. How many dogs would be left in total?
    </string>
    <string name="question_11">
        Complete this sequence?\n
            2 3 4 9 16 81 256
    </string>
    <string name="question_12">
        &#160;9&#160;&#160;&#160;7&#160;&#160;&#160;&#160;&#160;&#160;15&#160;&#160;&#160;6&#160;&#160;&#160;&#160;&#160;&#160;6&#160;&#160;&#160;9
        5&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;18&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;X\n
        &#160;5&#160;&#160;&#160;8&#160;&#160;&#160;&#160;&#160;&#160;2&#160;&#160;&#160;11&#160;&#160;&#160;&#160;&#160;&#160;5&#160;&#160;&#160;17
    </string>
    <string name="question_13">
        6&#160;&#160;&#160;&#160;6&#160;&#160;&#160;&#160;8\n
        5&#160;&#160;&#160;&#160;7&#160;&#160;&#160;&#160;5\n
        4&#160;&#160;&#160;&#160;3&#160;&#160;&#160;&#160;X\n
        120&#160;&#160;126&#160;&#160;320
    </string>
</resources>