<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayAct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30">

            <ImageView
                android:id="@+id/question_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:orientation="vertical"
            android:weightSum="120">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/answer"
                    android:textSize="30sp"
                    android:gravity="center_horizontal|center"
                    android:id="@+id/answer_input"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/hint_icon" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/x"
                    android:id="@+id/clear"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:orientation="horizontal"
                android:weightSum="5">

                <Button
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_1"
                    android:textSize="20sp"
                    android:gravity="center|center_horizontal"
                    android:textStyle="bold"
                    android:id="@+id/one"/>

                <Button
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_2"
                    android:id="@+id/two"
                    android:textSize="20sp"
                    android:gravity="center|center_horizontal"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_3"
                    android:id="@+id/three"
                    android:textSize="20sp"
                    android:gravity="center|center_horizontal"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_4"
                    android:id="@+id/four"
                    android:textSize="20sp"
                    android:gravity="center|center_horizontal"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_5"
                    android:id="@+id/five"
                    android:textSize="20sp"
                    android:gravity="center|center_horizontal"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:orientation="horizontal"
                android:weightSum="5">

                <Button
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_6"
                    android:id="@+id/six"
                    android:textSize="20sp"
                    android:gravity="center|center_horizontal"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_7"
                    android:id="@+id/seven"
                    android:textSize="20sp"
                    android:gravity="center|center_horizontal"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_8"
                    android:id="@+id/eight"
                    android:textSize="20sp"
                    android:gravity="center|center_horizontal"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_9"
                    android:id="@+id/nine"
                    android:textSize="20sp"
                    android:gravity="center|center_horizontal"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:id="@+id/zero"
                    android:textSize="20sp"
                    android:gravity="center|center_horizontal"
                    android:textStyle="bold"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>